--- a/index.html
+++ b/index.html
@@ -4,8 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pop-Up</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <div class="container">
+        <button type="submit" class="btn" onclick="openpopup()">Submit</button>
+        <div class="popup" id="popup">
+            <img src="WhatsApp Image 2024-06-06 at 11.27.17_ba3668e8.jpg" alt="">
+            <h2>Thanks You!</h2>
+            <p>Your details has been successfully submitted. thanks!</p>
+            <button type="button" onclick="closepopup()">OK</button>
+        </div>
+    </div>
+    <script>
+        let popup = document.getElementById("popup");
+
+        function openpopup(){
+            popup.classList.add("openpopup")
+        }
+        function closepopup(){
+            popup.classList.remove("openpopup")
+        }
+    </script>
 </body>
 </html>
